--- a/D3_CSS/assets/css/Bayeux.css
+++ b/D3_CSS/assets/css/Bayeux.css
@@ -18,10 +18,12 @@ body {
 
 h1 {
     font-family: 'Prata', serif;
+    font-size: 64px;
 }
 
 h3 {
     font-family: 'Prata', serif;
+    font-size: 24px;
     margin-top: 0;
 }
 
@@ -30,7 +32,7 @@ h3 {
     margin-bottom: 0;
 }
 
-a {
+a{
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -40,7 +42,7 @@ h6 {
     margin-top: 56px;
     color: white;
     border-radius: 6px;
-    background-image: linear-gradient(to right,#13BBF8, #B69AB6);
+    background-image: linear-gradient(to right, #9B9A0B,#9B0292);
 }
 
 ul {
@@ -58,5 +60,18 @@ border-bottom: 1px solid #dfdfdf;
 li a{
     text-decoration: none;
     color: #13BBF8;
-
 }
+
+footer{
+    background-color: black;
+    padding: 16px;
+    text-align: center;
+}
+
+footer a{
+    color: white;
+}
+
+a:visited {
+    color: #9B9A0B;
+  }
