--- a/D3_CSS/assets/css/Rouen.css
+++ b/D3_CSS/assets/css/Rouen.css
@@ -18,10 +18,12 @@ body {
 
 h1 {
     font-family: 'Prata', serif;
+    font-size: 64px;
 }
 
 h3 {
     font-family: 'Prata', serif;
+    font-size: 24px;
     margin-top: 0;
 }
 
@@ -40,7 +42,7 @@ h6 {
     margin-top: 56px;
     color: white;
     border-radius: 6px;
-    background-image: linear-gradient(to right, #13BBF8, #B69AB6);
+    background-image: linear-gradient(to right, #934C0B, #672023);
 }
 
 ul {
@@ -59,3 +61,17 @@ li a {
     text-decoration: none;
     color: #13BBF8;
 }
+
+footer{
+    background-color: black;
+    padding: 16px;
+    text-align: center;
+}
+
+footer a{
+    color: white;
+}
+
+a:visited {
+    color: #934C0B;
+  }
