--- a/D3_CSS/assets/css/style.css
+++ b/D3_CSS/assets/css/style.css
@@ -18,10 +18,12 @@ body {
 
 h1 {
     font-family: 'Prata', serif;
+    font-size: 64px;
 }
 
 h3 {
     font-family: 'Prata', serif;
+    font-size: 24px;
     margin-top: 0;
 }
 
@@ -58,4 +60,8 @@ li {
 li a {
     text-decoration: none;
     color: #13BBF8;
+}
+
+a:visited {
+    color: #B69AB6;
 }
