--- a/D3_CSS/assets/css/Bayeux.css
+++ b/D3_CSS/assets/css/Bayeux.css
@@ -13,7 +13,7 @@ body {
 .image-container {
     height: 500px;
     background-image: url(https://images.unsplash.com/photo-1558637634-f54fc5f9d9ce?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1194&q=80);
-    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 h1 {
@@ -32,7 +32,7 @@ h3 {
     margin-bottom: 0;
 }
 
-a{
+a {
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -42,7 +42,7 @@ h6 {
     margin-top: 56px;
     color: white;
     border-radius: 6px;
-    background-image: linear-gradient(to right, #9B9A0B,#9B0292);
+    background-image: linear-gradient(to right, #9B9A0B, #9B0292);
 }
 
 ul {
@@ -51,27 +51,27 @@ ul {
 }
 
 li {
-padding-top: 6px;
-padding-bottom: 6px;
-padding-left: 22px;
-border-bottom: 1px solid #dfdfdf;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    padding-left: 22px;
+    border-bottom: 1px solid #dfdfdf;
 }
 
-li a{
+li a {
     text-decoration: none;
     color: #13BBF8;
 }
 
-footer{
+footer {
     background-color: black;
     padding: 16px;
     text-align: center;
 }
 
-footer a{
+footer a {
     color: white;
 }
 
 a:visited {
     color: #9B9A0B;
-  }
+}
