--- a/D3_CSS/assets/css/Saint-Malo.css
+++ b/D3_CSS/assets/css/Saint-Malo.css
@@ -13,7 +13,7 @@ body {
 .image-container {
     height: 500px;
     background-image: url(https://images.unsplash.com/photo-1616350428103-cc6bf12d46f0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1067&q=80);
-    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 h1 {
