--- a/D3_CSS/assets/css/style.css
+++ b/D3_CSS/assets/css/style.css
@@ -13,7 +13,7 @@ body {
 .image-container {
     height: 500px;
     background-image: url(https://images.unsplash.com/photo-1656401581165-38d41573ada1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
-    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 h1 {
